# Few-Shot-Intent-Classification

./: .gitignore  GeneticAugmentation.ipynb  NLPAugmentation.ipynb  README.md  pyproject.toml
BaselineModel/: intent_predictor.py  readme.md  train_classifier.py  train_emb_knn.py
BaselineModel/models/: classifier.py  emb_knn.py  utils.py
data/aug_data/data/back_translation/: embs.npy  seq.in
data/aug_data/data/banking77/train_10/: embs.npy
data/aug_data/data/contextual_replacement/: embs.npy  seq.in
data/aug_data/data/glove_word_replace/: embs.npy  seq.in
data/aug_data/data/gpt2_msgs/: embs.npy  label  seq.in
data/aug_data/data/random_delete/: embs.npy  seq.in
data/aug_data/data/random_swap/: embs.npy  seq.in
data/aug_data/data/synonym_replace/: embs.npy  seq.in
experiments/bert/: FewShotBert.ipynb
gpt2-message-generation/: GPT_2_Extends.ipynb
