[tool.poetry]
name = "few-shot-intent-classification"
version = "0.1.0"
description = "Diploma research for Few Shot Intent Classification"
authors = ["Gleb Drozdov <drozdov@ipavlov.ai>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
